--- a/share_handler/pubspec.yaml
+++ b/share_handler/pubspec.yaml
@@ -26,12 +26,12 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  share_handler_android: ^0.0.11
-  # share_handler_android:
-  #   path: ../share_handler_android
-  share_handler_ios: ^0.0.15
-  # share_handler_ios:
-  #   path: ../share_handler_ios
+  # share_handler_android: ^0.0.11
+  share_handler_android:
+    path: ../share_handler_android
+  # share_handler_ios: ^0.0.15
+  share_handler_ios:
+    path: ../share_handler_ios
   # share_handler_linux:
   #   path: ../share_handler_linux 
   # share_handler_macos:
